BODA-30 feat: 북마크 삭제 로직 구현